# monad-bft

./: .dockerignore  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  TODO  Test  decoder.py  rust-toolchain.toml  tc-gen.py  wrapper.py
monad-archive/: .gitignore  ARCHITECTURAL_ISSUES.md  Cargo.toml  README.md  V2-Spec.md  create_dynamodb_table.sh  docker-compose.yml  object_store_implementation_learnings.md  v2-rebase.md
monad-archive/.claude/: settings.local.json
monad-archive/examples/: get_logs_benchmarks.rs
monad-archive/scripts/: check-for-orphan-tables.sh  cloud-proxy-lambda.js  create-bucket.sh  create_table.sh  delete-table.sh  ensure-tables.sh  free-api-key-lambda.js  logs.sh  setup-systemd.sh
monad-archive/src/: archive_block_data.rs  archive_interface.rs  archive_reader.rs  archive_tx_index.rs  archive_writer.rs  block_data_archive.rs  cli.rs  cli_base.rs  dynamodb.rs  errors.rs  failover_circuit_breaker.rs  fault.rs  kv_interface.rs  ledger_watcher.rs  lib.rs  main.rs  metrics.rs  prelude.rs  rlp_offset_scanner.rs  s3_archive.rs  test_utils.rs  triedb.rs  tx_indexer.rs
monad-archive/src/kvstore/: cloud_proxy.rs  dynamodb.rs  memory.rs  mod.rs  mongo.rs  object_store.rs  rocksdb_storage.rs  s3.rs  triedb_reader.rs
monad-archive/src/model/: block_data_archive.rs  index_repr.rs  logs_index.rs  mod.rs  state_snapshot.rs  tx_index_archive.rs
monad-archive/src/model_v2/: eviction.rs  logs_index.rs  mod.rs
monad-archive/src/storage/: cloud_proxy.rs  dynamodb.rs  fs_storage.rs  memory.rs  mod.rs  rocksdb_storage.rs  rpc_reader.rs  s3.rs  triedb_reader.rs
monad-archive/src/workers/: bft_block_archiver.rs  block_archive_worker.rs  block_data_archive.rs  events_uploader.rs  file_checkpointer.rs  index_worker.rs  mod.rs  tests.rs
monad-archive/tests/: test.rs
monad-async-state-verify/: Cargo.toml
monad-async-state-verify/src/: lib.rs  peer.rs
monad-block-persist/: Cargo.toml
monad-block-persist/src/: lib.rs
monad-block-sync/: Cargo.toml
monad-block-sync/src/: lib.rs
monad-blockdb/: Cargo.toml  README.md
monad-blockdb/src/: lib.rs
monad-blocksync/: Cargo.toml
monad-blocksync/src/: blocksync.rs  lib.rs
monad-blocksync/src/convert/: message.rs
monad-blocksync/src/messages/: message.rs  mod.rs
monad-blocktimestamp/: Cargo.toml
monad-blocktimestamp/src/: lib.rs  timestamp.rs  timestamp_adjuster.rs  timestamp_command.rs
monad-blocktimestamp/src/convert/: message.rs
monad-blocktimestamp/src/messages/: message.rs
monad-blocktree/: Cargo.toml
monad-blocktree/src/: blocktree.rs  lib.rs  tree.rs
monad-bls/: Cargo.toml
monad-bls/benches/: bls.rs  scaled_bls.rs
monad-bls/src/: aggregation_tree.rs  bls.rs  convert.rs  lib.rs  scaled_aggregation_tree.rs
monad-compress/: Cargo.toml
monad-compress/benches/: bench.rs
monad-compress/examples/: README.md  example.dict  fetch_txs.rs  proposal.rs  txbatch.rlp  txbatch.rs
monad-compress/src/: brotli.rs  deflate.rs  lib.rs  lz4.rs  nop.rs  util.rs  zstd.rs
monad-consensus/: Cargo.toml
monad-consensus-state/: Cargo.toml
monad-consensus-state/benches/: state_machine.rs
monad-consensus-state/src/: blocksync.rs  cascade.rs  command.rs  lib.rs  timestamp.rs  timestamp_adjuster.rs  wrapper.rs
monad-consensus-types/: Cargo.toml
monad-consensus-types/benches/: bls.rs  hasher_bench.rs
monad-consensus-types/examples/: blockgen.rs  parse-forkpoint.rs
monad-consensus-types/src/: block.rs  block_validator.rs  bls.rs  certificate_signature.rs  checkpoint.rs  clock.rs  command.rs  evidence.rs  ledger.rs  lib.rs  message_signature.rs  metrics.rs  multi_sig.rs  no_endorsement.rs  payload.rs  quorum_certificate.rs  signature_collection.rs  state_root_hash.rs  test_utils.rs  timeout.rs  tip.rs  transaction.rs  transaction_validator.rs  txpool.rs  validation.rs  validator_accountability.rs  validator_data.rs  voting.rs
monad-consensus-types/src/convert/: block.rs  (+9 more)
monad-consensus/fuzz/: .gitignore  Cargo.toml
monad-consensus/src/: evidence.rs  lib.rs  no_endorsement_state.rs  pacemaker.rs  recovery_state.rs  round_recovery_state.rs  types.rs  validation.rs  vote_state.rs
monad-consensus/tests/: block.rs  message.rs  proposal.rs  protobuf.rs  qc.rs  vote_state.rs
monad-control-panel/: Cargo.toml
monad-control-panel/src/: ipc.rs  lib.rs
monad-crypto/: Cargo.toml
monad-crypto/benches/: hasher_bench.rs
monad-crypto/src/: bls12_381.rs  certificate_signature.rs  hasher.rs  lib.rs  rustls.rs  secp256k1.rs  signing_domain.rs
monad-cxx/: CMakeLists.txt  Cargo.toml  build.rs  toolchain-avx2.cmake  toolchain-avx512.cmake
monad-cxx/include/: cxx.hpp  eth_call.hpp  test_db.hpp
monad-cxx/src/: eth_call.cpp  lib.rs  mock_eth_call.cpp  mock_test_db.cpp  test_db.cpp
monad-debug-node/: Cargo.toml
monad-debug-node/src/: main.rs
monad-debugger/: Cargo.toml  build.sh
monad-debugger/frontend/: .gitignore  graphql.config.yaml  index.html  package.json  pnpm-lock.yaml  vite.config.ts
monad-debugger/src/: graphql.rs  lib.rs  simulation.rs
monad-discovery/: Cargo.toml
monad-discovery/src/: lib.rs  message.rs  nop_discovery.rs
monad-driver/: Cargo.toml
monad-driver/src/: lib.rs
monad-election/: Cargo.toml
monad-election/src/: leader_election.rs  lib.rs  qc_reputation.rs  simple_round_robin.rs
monad-eth-block-policy/: Cargo.toml
monad-eth-block-policy/src/: lib.rs  nonce.rs  utils.rs
monad-eth-block-policy/tests/: eip7702.rs
monad-eth-block-validator/: Cargo.toml
monad-eth-block-validator/src/: lib.rs
monad-eth-ledger/: Cargo.toml
monad-eth-ledger/src/: lib.rs
monad-eth-testutil/: .gitignore  Cargo.toml  anvil.sh  txgen.sh
monad-eth-testutil/examples/: ERC20.json  config.json  run.sh  test_file.rs  token_xfer_gen.rs  tx_generator.rs
monad-eth-testutil/src/: lib.rs
monad-eth-tx/: Cargo.toml
monad-eth-tx/src/: lib.rs  utils.rs
monad-eth-txpool-executor/: Cargo.toml
monad-eth-txpool-executor/src/: forward.rs  lib.rs  metrics.rs  preload.rs  reset.rs
monad-eth-txpool-ipc/: Cargo.toml
monad-eth-txpool-ipc/src/: lib.rs
(+1144 files in other folders)
