[workspace]

members = [
    "monad-archive",
    "monad-block-persist",
    "monad-blocksync",
    "monad-blocktree",
    "monad-bls",
    "monad-chain-config",
    "monad-compress",
    "monad-consensus-state",
    "monad-consensus-types",
    "monad-consensus",
    "monad-control-panel",
    "monad-crypto",
    "monad-dataplane",
    "monad-debug-node",
    "monad-debugger",
    "monad-ethcall",
    "monad-eth-block-policy",
    "monad-eth-block-validator",
    "monad-eth-ledger",
    "monad-eth-testutil",
    "monad-eth-txpool-executor",
    "monad-eth-txpool-ipc",
    "monad-eth-txpool-types",
    "monad-eth-txpool",
    "monad-eth-types",
    "monad-executor-glue",
    "monad-executor",
    "monad-keystore",
    "monad-ledger",
    "monad-mock-swarm",
    "monad-multi-sig",
    "monad-node-config",
    "monad-node",
    "monad-perf-util",
    "monad-proto",
    "monad-randomized-tests",
    "monad-raptor",
    "monad-raptorcast",
    "monad-router-filter",
    "monad-router-scheduler",
    "monad-rpc",
    "monad-secp",
    "monad-state-backend",
    "monad-state",
    "monad-statesync",
    "monad-testground",
    "monad-testutil",
    "monad-transformer",
    "monad-triedb-utils",
    "monad-triedb",
    "monad-twins",
    "monad-types",
    "monad-updaters",
    "monad-validator",
    "monad-wal",
]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.release]
debug = true
panic = "abort"

[workspace.metadata.cargo-shear]
ignored = ["alloy-transport-http", "getrandom", "pbjson"]

[workspace.dependencies]
alloy-consensus = "0.8"
alloy-eips = "0.8"
alloy-json-rpc = "0.8"
alloy-network = "0.8"
alloy-primitives = "0.8"
alloy-rlp = "0.3"
alloy-rpc-client = "0.8"
alloy-rpc-types = "0.8"
alloy-rpc-types-eth = "0.8"
alloy-rpc-types-trace = "0.8"
alloy-signer = "0.8"
alloy-signer-local = "0.8"
alloy-sol-macro = "0.8"
alloy-sol-types = "0.8"
alloy-transport = "0.8"
alloy-transport-http = "0.8"

actix = "0.13"
actix-http = "3.6.0"
actix-test = "0.1"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
aes = "0.8.3"
as-any = "0.3.1"
async-graphql = "7.0"
auto_impl = "1.2"
aws-config = "1.5.9"
aws-sdk-dynamodb = "1.54.0"
aws-sdk-s3 = "1.58.0"
base64 = "0.22.1"
bincode = "1.3"
bindgen = "0.69"
bitvec = "1.0"
blake3 = "1.5"
blst = "0.3"
brotli = "3.4"
bytes = "1.5"
chrono = "0.4.34"
clap = "4.2"
cmake = "0.1"
console_error_panic_hook = "0.1"
criterion = { version = "0.4", features = ["html_reports"] }
crossterm = "0.27.0"
ctr = "0.9.2"
dashmap = "6.1.0"
dialoguer = "0.10"
env_logger = "0.10"
eyre = "0.6.12"
flate2 = "1.0"
flume = "0.11.0"
futures = "0.3"
futures-util = "0.3"
getrandom = "0.2"
hdwallet = "0.4.1"
hex = "0.4"
indexmap = "2.4.0"
inotify = "0.11"
inventory = "0.3"
itertools = "0.10"
libc = "0.2.153"
lru = "0.12"
lz4 = "1.24"
monoio = { version = "0.2.4", features = ["sync"] }
notify = "6.1.1"
ntest = "0.9"
opentelemetry = "0.24"
opentelemetry_sdk = "0.24"
opentelemetry-otlp = "0.17"
opentelemetry-semantic-conventions = "0.16"
pbjson = "0.7"
pbjson-build = "0.7"
pbkdf2 = "0.12"
peak_alloc = "0.2"
pin-project = "1.1.5"
priority-queue = "1.3"
prost = "0.12"
prost-build = "0.12"
protobuf-src = "1.1"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
ratatui = "0.26.0"
rayon = "1.7"
reqwest = { version = "0.11", features = ["json"] }
scrypt = { version = "0.11", default-features = false }
secp256k1 = "0.26"
serde = "1.0"
serde_cbor = "0.11"
serde_json = "1.0"
sha2 = "0.10"
simple-xml-builder = "1.1"
sorted_vector_map = "0.2.0"
sorted-vec = "0.8.3"
tempfile = "3.5"
test-case = "3.0"
thiserror = "1.0"
tiny-bip39 = "1.0"
tiny-keccak = "2"
tokio = { version = "1.39", features = ["sync"] }
tokio-retry = "0.3.0"
tokio-stream = "0.1.17"
tokio-util = "0.7"
toml = "0.7"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-opentelemetry = "0.25"
tracing-subscriber = "0.3"
tracing-test = "0.2"
unicode-normalization = "0.1.23"
url = "2.5.0"
wasm-bindgen = "0.2"
zerocopy = "0.6"
zeroize = "1.3"
