[workspace]
resolver = "2"
members = ["monad-*"]
exclude = ["monad-cxx", "monad-scripts"]

[profile.dev]
opt-level = 1

[profile.release]
debug = true
panic = "abort"

[workspace.metadata.cargo-shear]
ignored = [
    "alloy-transport-http",
    "getrandom",
    "pbjson",
    "monad-peer-disc-swarm",
]

[workspace.dependencies]
monad-archive = { path = "./monad-archive" }
monad-block-persist = { path = "./monad-block-persist" }
monad-blocksync = { path = "./monad-blocksync" }
monad-blocktree = { path = "./monad-blocktree" }
monad-bls = { path = "./monad-bls" }
monad-chain-config = { path = "./monad-chain-config" }
monad-compress = { path = "./monad-compress" }
monad-consensus = { path = "./monad-consensus" }
monad-consensus-state = { path = "./monad-consensus-state" }
monad-consensus-types = { path = "./monad-consensus-types" }
monad-control-panel = { path = "./monad-control-panel" }
monad-crypto = { path = "./monad-crypto" }
monad-dataplane = { path = "./monad-dataplane" }
monad-eth-block-policy = { path = "./monad-eth-block-policy" }
monad-eth-block-validator = { path = "./monad-eth-block-validator" }
monad-eth-ledger = { path = "./monad-eth-ledger" }
monad-eth-testutil = { path = "./monad-eth-testutil" }
monad-eth-txpool = { path = "./monad-eth-txpool" }
monad-eth-txpool-executor = { path = "./monad-eth-txpool-executor" }
monad-eth-txpool-ipc = { path = "./monad-eth-txpool-ipc" }
monad-eth-txpool-types = { path = "./monad-eth-txpool-types" }
monad-eth-types = { path = "./monad-eth-types" }
monad-ethcall = { path = "./monad-ethcall" }
monad-executor = { path = "./monad-executor" }
monad-executor-glue = { path = "./monad-executor-glue" }
monad-keystore = { path = "./monad-keystore" }
monad-ledger = { path = "./monad-ledger" }
monad-merkle = { path = "./monad-merkle" }
monad-mock-swarm = { path = "./monad-mock-swarm" }
monad-multi-sig = { path = "./monad-multi-sig" }
monad-node-config = { path = "./monad-node-config" }
monad-peer-disc-swarm = { path = "./monad-peer-disc-swarm" }
monad-peer-discovery = { path = "./monad-peer-discovery" }
monad-perf-util = { path = "./monad-perf-util" }
monad-proto = { path = "./monad-proto" }
monad-raptor = { path = "./monad-raptor" }
monad-raptorcast = { path = "./monad-raptorcast" }
monad-router-filter = { path = "./monad-router-filter" }
monad-router-scheduler = { path = "./monad-router-scheduler" }
monad-rpc-docs = { path = "./monad-rpc/monad-rpc-docs" }
monad-rpc-docs-derive = { path = "./monad-rpc/monad-rpc-docs/monad-rpc-docs-derive" }
monad-secp = { path = "./monad-secp" }
monad-state = { path = "./monad-state" }
monad-state-backend = { path = "./monad-state-backend" }
monad-statesync = { path = "./monad-statesync" }
monad-testutil = { path = "./monad-testutil" }
monad-transformer = { path = "./monad-transformer" }
monad-triedb = { path = "./monad-triedb" }
monad-triedb-cache = { path = "./monad-triedb-cache" }
monad-triedb-utils = { path = "./monad-triedb-utils" }
monad-twins-utils = { path = "./monad-twins/utils" }
monad-types = { path = "./monad-types" }
monad-updaters = { path = "./monad-updaters" }
monad-validator = { path = "./monad-validator" }
monad-wal = { path = "./monad-wal" }

actix = "0.13"
actix-http = "3.6.0"
actix-test = "0.1"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
aes = "0.8.3"
alloy-consensus = "0.8"
alloy-eips = "0.8"
alloy-json-rpc = "0.8"
alloy-network = "0.8"
alloy-primitives = "0.8"
alloy-rlp = "0.3"
alloy-rpc-client = "0.8"
alloy-rpc-types = "0.8"
alloy-rpc-types-eth = "0.8"
alloy-rpc-types-trace = "0.8"
alloy-signer = "0.8"
alloy-signer-local = "0.8"
alloy-sol-macro = "0.8"
alloy-sol-types = "0.8"
alloy-transport = "0.8"
alloy-transport-http = "0.8"
as-any = "0.3.1"
async-graphql = "7.0"
auto_impl = "1.2"
aws-config = "1.5.9"
aws-sdk-dynamodb = "1.54.0"
aws-sdk-s3 = "1.58.0"
base64 = "0.22.1"
bincode = "1.3"
bindgen = "0.69"
bitvec = "1.0"
blake3 = "1.5"
blst = "0.3"
brotli = "3.4"
bytes = "1.5"
chrono = "0.4.34"
clap = "4.2"
cmake = "0.1"
console_error_panic_hook = "0.1"
criterion = { version = "0.4", features = ["html_reports"] }
crossterm = "0.27.0"
ctr = "0.9.2"
dashmap = "6.1.0"
enum_dispatch = "0.3.13"
env_logger = "0.10"
eyre = "0.6.12"
flate2 = "1.0"
flume = "0.11.0"
futures = "0.3"
futures-util = "0.3"
getrandom = "0.2"
hdwallet = "0.4.1"
hex = "0.4"
indexmap = "2.4.0"
inotify = "0.11"
inventory = "0.3"
itertools = "0.10"
libc = "0.2.153"
lru = "0.12"
lz4 = "1.24"
mongodb = "3.2.1"
monoio = { version = "0.2.4", features = ["sync"] }
notify = "6.1.1"
ntest = "0.9"
once_cell = "1.19.0"
opentelemetry = "0.29"
opentelemetry_sdk = "0.29"
opentelemetry-otlp = "0.29"
opentelemetry-semantic-conventions = "0.29"
pbjson = "0.7"
pbjson-build = "0.7"
pbkdf2 = "0.12"
peak_alloc = "0.2"
pin-project = "1.1.5"
priority-queue = "1.3"
proc-macro2 = "1.0.86"
prost = "0.12"
prost-build = "0.12"
protobuf-src = "1.1"
quote = "1.0.36"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
ratatui = "0.26.0"
rayon = "1.7"
regex = "1.10.2"
reqwest = { version = "0.11", features = ["json"] }
rocksdb = "0.22.0"
schemars = "0.8.21"
scrypt = { version = "0.11", default-features = false }
secp256k1 = "0.26"
serde = "1.0"
serde_cbor = "0.11"
serde_json = "1.0"
serial_test = "3.2.0"
sha2 = "0.10"
simple-xml-builder = "1.1"
socket2 = "0.5.9"
sorted_vector_map = "0.2.0"
sorted-vec = "0.8.3"
syn = { version = "1.0.0", features = ["full"] }
tempfile = "3.5"
test-case = "3.0"
thiserror = "1.0"
tiny-bip39 = "1.0"
tiny-keccak = "2"
tokio = { version = "1.39", features = ["sync"] }
tokio-retry = "0.3.0"
tokio-stream = "0.1.17"
tokio-util = "0.7"
toml = "0.7"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-opentelemetry = "0.30"
tracing-subscriber = "0.3"
tracing-test = "0.2"
unicode-normalization = "0.1.23"
url = "2.5.0"
vergen-git2 = "1.0.5"
wasm-bindgen = "0.2"
zerocopy = "0.6"
zeroize = "1.3"
zstd = "0.13"
