[package]
name = "monad-archive"
description = "Monad archive solution"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "monad-archive-checker"
bench = false

[[bin]]
name = "monad-archiver"
bench = false

[[bin]]
name = "monad-indexer"
bench = false

[[bin]]
name = "monad-index-checker"
bench = false

[lib]
bench = false

[dependencies]
monad-triedb-utils = { path = "../monad-triedb-utils" }

alloy-rlp = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
dashmap = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp = { workspace = true, features = ["metrics"] }
opentelemetry-semantic-conventions = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "net",
    "macros",
    "rt-multi-thread",
    "fs",
    "sync",
] }
tokio-retry = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
futures = { workspace = true }
reth-primitives = { workspace = true }
