[package]
name = "monad-archive"
description = "Monad archive solution"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "monad-archive-checker"
bench = false

[[bin]]
name = "monad-archiver"
bench = false

[[bin]]
name = "monad-indexer"
bench = false

[[bin]]
name = "monad-index-checker"
bench = false

[lib]
bench = false

[features]
default = []
mongodb-integration-tests = []

[dependencies]
monad-triedb-utils = { path = "../monad-triedb-utils" }
monad-types = { path = "../monad-types" }
alloy-consensus = { workspace = true, features = ["k256"] }
alloy-rlp = { workspace = true }
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-signer = { workspace = true }
alloy-signer-local = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dashmap = { workspace = true }
enum_dispatch = "0.3.13"
eyre = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
rayon = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
opentelemetry-otlp = { workspace = true, features = ["metrics"] }
opentelemetry-semantic-conventions = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "net",
    "macros",
    "rt-multi-thread",
    "fs",
    "sync",
] }
tokio-retry = { workspace = true }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
reqwest = { workspace = true }
rocksdb = "0.22.0"
url = { workspace = true }
tempfile.workspace = true
mongodb = "3.2.1"
regex = "1.10.2"

[dev-dependencies]
monad-eth-testutil = { path = "../monad-eth-testutil" }
