[package]
name = "monad-block-sync"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monad-consensus = { path = "../monad-consensus" }
monad-consensus-state = { path = "../monad-consensus-state" }
monad-consensus-types = { path = "../monad-consensus-types" }
monad-types = { path = "../monad-types" }
monad-validator = { path = "../monad-validator" }

[dev-dependencies]
monad-testutil = { path = "../monad-testutil" }
monad-crypto = { path = "../monad-crypto" }
