[package]
name = "monad-blockdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]
monad-consensus-types = { path = "../monad-consensus-types" }
monad-types = { path = "../monad-types" }

heed = { workspace = true }
reth-primitives = { workspace = true }
serde = { workspace = true }
