[package]
name = "monad-blocktree"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
alloy-rlp = { workspace = true }
alloy-primitives = { workspace = true }

monad-consensus-types = { path = "../monad-consensus-types" }
monad-tracing-counter = { path = "../monad-tracing-counter" }
monad-types = { path = "../monad-types" }

bytes = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
monad-crypto = { path = "../monad-crypto" }
monad-eth-types = { path = "../monad-eth-types" }
monad-testutil = { path = "../monad-testutil" }
