[package]
name = "monad-blocktree"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
monad-consensus-types = { workspace = true }
monad-crypto = { workspace = true }
monad-state-backend = { workspace = true }
monad-types = { workspace = true }

[dev-dependencies]
monad-crypto = { workspace = true }
monad-eth-types = { workspace = true }
monad-testutil = { workspace = true }
