[package]
name = "monad-bls"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
monad-consensus-types = { path = "../monad-consensus-types" }
monad-crypto = { path = "../monad-crypto" }
monad-proto = { path = "../monad-proto" }
monad-types = { path = "../monad-types" }

bitvec = { workspace = true, features = ["serde"] }
blst = { workspace = true }
prost = { workspace = true }
serde_cbor = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
monad-testutil = { path = "../monad-testutil" }

criterion = { workspace = true }
rand = { workspace = true }
test-case = { workspace = true }

[[bench]]
name = "bls"
harness = false
