[package]
name = "monad-bls"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
monad-consensus-types = { workspace = true }
monad-crypto = { workspace = true }
monad-types = { workspace = true }
monad-validator = { workspace = true }

alloy-rlp = { workspace = true }
bitvec = { workspace = true, features = ["serde"] }
blst = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
monad-testutil = { workspace = true }

criterion = { workspace = true }
rand = { workspace = true }
test-case = { workspace = true }

[[bench]]
name = "bls"
harness = false
