[package]
name = "monad-compress"
version = "0.1.0"
edition = "2021"

[lib]
bench = false

[dependencies]
brotli = { workspace = true }
bytes = { workspace = true }
flate2 = { workspace = true }
lz4 = { workspace = true }

[dev-dependencies]
monad-consensus = { path = "../monad-consensus" }
monad-consensus-types = { path = "../monad-consensus-types" }
monad-crypto = { path = "../monad-crypto" }
monad-state = { path = "../monad-state" }
monad-testutil = { path = "../monad-testutil" }
monad-types = { path = "../monad-types" }
monad-validator = { path = "../monad-validator" }

criterion = { workspace = true }
peak_alloc = { workspace = true }
rand_chacha = { workspace = true }

[[example]]
name = "proposal"

[[example]]
name = "txbatch"

[[bench]]
name = "bench"
harness = false
