[package]
name = "monad-compress"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
brotli = { workspace = true }
bytes = { workspace = true }
flate2 = { workspace = true }
lz4 = { workspace = true }

[dev-dependencies]
monad-bls = { workspace = true }
monad-consensus = { workspace = true }
monad-consensus-types = { workspace = true }
monad-eth-types = { workspace = true }
monad-secp = { workspace = true }
monad-state = { workspace = true }
monad-testutil = { workspace = true }
monad-types = { workspace = true }
monad-validator = { workspace = true }

criterion = { workspace = true }
peak_alloc = { workspace = true }

[[example]]
name = "proposal"

[[example]]
name = "txbatch"

[[bench]]
name = "bench"
harness = false
