[package]
name = "monad-consensus-state"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
monad-blocktree = { path = "../monad-blocktree" }
monad-consensus = { path = "../monad-consensus" }
monad-consensus-types = { path = "../monad-consensus-types" }
monad-crypto = { path = "../monad-crypto" }
monad-eth-types = { path = "../monad-eth-types" }
monad-types = { path = "../monad-types" }
monad-tracing-counter = { path = "../monad-tracing-counter" }
monad-validator = { path = "../monad-validator" }

bytes = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
monad-eth-testutil = { path = "../monad-eth-testutil" }
monad-eth-tx = { path = "../monad-eth-tx" }
monad-eth-txpool = { path = "../monad-eth-txpool" }
monad-eth-block-policy = { path = "../monad-eth-block-policy" }
monad-eth-block-validator = { path = "../monad-eth-block-validator" }
monad-testutil = { path = "../monad-testutil" }
monad-multi-sig = { path = "../monad-multi-sig" }
criterion = { workspace = true, features = ["html_reports"] }

itertools = { workspace = true }
test-case = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true }

rand = { workspace = true }
reth-primitives = { workspace = true }

[[bench]]
name = "state_machine"
harness = false