[package]
name = "monad-consensus-state"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
monad-blocktree = { path = "../monad-blocktree" }
monad-chain-config = { path = "../monad-chain-config" }
monad-consensus = { path = "../monad-consensus" }
monad-consensus-types = { path = "../monad-consensus-types" }
monad-crypto = { path = "../monad-crypto" }
monad-eth-types = { path = "../monad-eth-types" }
monad-types = { path = "../monad-types" }
monad-validator = { path = "../monad-validator" }
monad-state-backend = { path = "../monad-state-backend" }

tracing = { workspace = true }

[dev-dependencies]
monad-eth-block-policy = { path = "../monad-eth-block-policy" }
monad-eth-block-validator = { path = "../monad-eth-block-validator" }
monad-multi-sig = { path = "../monad-multi-sig" }
monad-testutil = { path = "../monad-testutil" }

alloy-consensus = { workspace = true }
itertools = { workspace = true }
test-case = { workspace = true }
tracing-test = { workspace = true }
