[package]
name = "monad-consensus-state"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
monad-blocktree = { workspace = true }
monad-chain-config = { workspace = true }
monad-consensus = { workspace = true }
monad-consensus-types = { workspace = true }
monad-crypto = { workspace = true }
monad-eth-types = { workspace = true }
monad-metrics = { workspace = true }
monad-state-backend = { workspace = true }
monad-types = { workspace = true }
monad-validator = { workspace = true }

tracing = { workspace = true }

[dev-dependencies]
monad-eth-block-policy = { workspace = true }
monad-eth-block-validator = { workspace = true }
monad-multi-sig = { workspace = true }
monad-testutil = { workspace = true }

alloy-consensus = { workspace = true }
itertools = { workspace = true }
test-case = { workspace = true }
tracing-test = { workspace = true }
