[package]
name = "monad-consensus-types"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
monad-crypto = { path = "../monad-crypto" }
monad-proto = { path = "../monad-proto" }
monad-types = { path = "../monad-types" }
monad-state-backend = { path = "../monad-state-backend" }

alloy-rlp = { workspace = true }
auto_impl = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
