[package]
name = "monad-consensus-types"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
monad-crypto = { workspace = true }
monad-proto = { workspace = true }
monad-state-backend = { workspace = true }
monad-types = { workspace = true }

alloy-rlp = { workspace = true }
auto_impl = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
prost = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
