[package]
name = "monad-consensus-types"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
monad-crypto = { workspace = true }
monad-state-backend = { workspace = true }
monad-types = { workspace = true }
monad-validator = { workspace = true }

alloy-rlp = { workspace = true }
auto_impl = { workspace = true }
bytes = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["serde_derive"] }
toml = { workspace = true }
