[package]
name = "monad-consensus"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
monad-consensus-types = { path = "../monad-consensus-types" }
monad-crypto = { path = "../monad-crypto" }
monad-proto = { path = "../monad-proto" }
monad-types = { path = "../monad-types" }
monad-validator = { path = "../monad-validator" }
monad-state-backend = { path = "../monad-state-backend" }

alloy-rlp = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
monad-bls = { path = "../monad-bls" }
monad-multi-sig = { path = "../monad-multi-sig" }
monad-testutil = { path = "../monad-testutil" }

test-case = { workspace = true }
