[package]
name = "monad-consensus"
version = "0.1.0"
edition = "2021"

# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
[lib]
bench = false

[dependencies]
monad-chain-config = { workspace = true }
monad-consensus-types = { workspace = true }
monad-crypto = { workspace = true }
monad-state-backend = { workspace = true }
monad-types = { workspace = true }
monad-validator = { workspace = true }

alloy-rlp = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
monad-bls = { workspace = true }
monad-multi-sig = { workspace = true }
monad-secp = { workspace = true }
monad-testutil = { workspace = true }

test-case = { workspace = true }
