[package]
name = "monad-control-panel"
version = "0.1.0"
edition = "2021"

[lib]
# this is necessary for criterion bench options
# https://bheisler.github.io/criterion.rs/book/faq.html#cargo-bench-gives-unrecognized-option-errors-for-valid-command-line-options
bench = false

[[bin]]
name = "control-panel"
path = "src/bin/control_panel.rs"
bench = false

[[bin]]
name = "debug-node"
path = "src/bin/debug_node.rs"
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy-primitives = { workspace = true }
bincode = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
inquire = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "time",
] }
tokio-util = { workspace = true, features = ["codec"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }

monad-bls = { path = "../monad-bls" }
monad-consensus-types = { path = "../monad-consensus-types" }
monad-crypto = { path = "../monad-crypto" }
monad-executor = { path = "../monad-executor" }
monad-executor-glue = { path = "../monad-executor-glue" }
monad-types = { path = "../monad-types" }
monad-secp = { path = "../monad-secp" }
